--- a/CurryOn.Actor/CurryOn.Actor.Mailbox.Common/CurryOn.Actor.Mailbox.Common.fsproj
+++ b/CurryOn.Actor/CurryOn.Actor.Mailbox.Common/CurryOn.Actor.Mailbox.Common.fsproj
@@ -11,11 +11,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CurryOn.Common" Version="0.1.3-prerelease" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CurryOn.Actor.Abstractions\CurryOn.Actor.Abstractions.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="5.0.1" />
+    <PackageReference Update="FSharp.Core" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
