--- a/CurryOn.Actor/CurryOn.Actor.Mailbox.RabbitMq/CurryOn.Actor.Mailbox.RabbitMq.fsproj
+++ b/CurryOn.Actor/CurryOn.Actor.Mailbox.RabbitMq/CurryOn.Actor.Mailbox.RabbitMq.fsproj
@@ -6,18 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Core.fs" />
-    <Compile Include="Location.fs" />
+    <Compile Include="Configuration.fs" />
     <Compile Include="Mailbox.fs" />
-    <Compile Include="Dispatch.fs" />
-    <Compile Include="Actor.fs" />
-    <Compile Include="System.fs" />
-    <Compile Include="Manifest.fs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CurryOn.Common" Version="0.1.3-prerelease" />
-    <PackageReference Include="CurryOn.Tasks" Version="0.1.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CurryOn.Actor.Abstractions\CurryOn.Actor.Abstractions.fsproj" />
+    <ProjectReference Include="..\CurryOn.Actor.Serialization\CurryOn.Actor.Serialization.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
