--- a/CurryOn.Actor/CurryOn.Actor.Serialization/CurryOn.Actor.Serialization.fsproj
+++ b/CurryOn.Actor/CurryOn.Actor.Serialization/CurryOn.Actor.Serialization.fsproj
@@ -6,18 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Core.fs" />
-    <Compile Include="Location.fs" />
-    <Compile Include="Mailbox.fs" />
-    <Compile Include="Dispatch.fs" />
-    <Compile Include="Actor.fs" />
-    <Compile Include="System.fs" />
-    <Compile Include="Manifest.fs" />
+    <Compile Include="Serializer.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CurryOn.Common" Version="0.1.3-prerelease" />
-    <PackageReference Include="CurryOn.Tasks" Version="0.1.0" />
+    <PackageReference Include="FsPickler.Json" Version="5.3.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CurryOn.Actor.Abstractions\CurryOn.Actor.Abstractions.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
