--- a/CurryOn.Actor/CurryOn.Actor.Abstractions/CurryOn.Actor.Abstractions.fsproj
+++ b/CurryOn.Actor/CurryOn.Actor.Abstractions/CurryOn.Actor.Abstractions.fsproj
@@ -16,8 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CurryOn.Common" Version="0.1.3-prerelease" />
-    <PackageReference Include="CurryOn.Tasks" Version="0.1.0" />
+    <PackageReference Include="CurryOn.Common" Version="0.2.0" />
+    <PackageReference Include="CurryOn.Tasks" Version="0.2.0" />
   </ItemGroup>
 
   <ItemGroup>
