--- a/CurryOn.Actor/CurryOn.Actor.Mailbox.Common/CurryOn.Actor.Mailbox.Common.fsproj
+++ b/CurryOn.Actor/CurryOn.Actor.Mailbox.Common/CurryOn.Actor.Mailbox.Common.fsproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CurryOn.Common" Version="0.1.3-prerelease" />
+    <PackageReference Include="CurryOn.Common" Version="0.2.0" />
   </ItemGroup>
 
   <ItemGroup>
