--- a/CurryOn.Actor/CurryOn.Actor.Mailbox.RabbitMq/CurryOn.Actor.Mailbox.RabbitMq.fsproj
+++ b/CurryOn.Actor/CurryOn.Actor.Mailbox.RabbitMq/CurryOn.Actor.Mailbox.RabbitMq.fsproj
@@ -11,16 +11,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
+    <PackageReference Include="CurryOn.RabbitMq" Version="0.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CurryOn.Actor.Abstractions\CurryOn.Actor.Abstractions.fsproj" />
+    <ProjectReference Include="..\CurryOn.Actor.Mailbox.Common\CurryOn.Actor.Mailbox.Common.fsproj" />
     <ProjectReference Include="..\CurryOn.Actor.Serialization\CurryOn.Actor.Serialization.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="6.0.0" />
+    <PackageReference Update="FSharp.Core" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
