--- a/CurryOn.Actor/CurryOn.Actor.Serialization/CurryOn.Actor.Serialization.fsproj
+++ b/CurryOn.Actor/CurryOn.Actor.Serialization/CurryOn.Actor.Serialization.fsproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CurryOn.Common" Version="0.1.3-prerelease" />
+    <PackageReference Include="CurryOn.Common" Version="0.2.0" />
     <PackageReference Include="FsPickler.Json" Version="5.3.2" />
   </ItemGroup>
 
