--- a/CurryOn.Actor/CurryOn.Actor.Mailbox.RabbitMq/CurryOn.Actor.Mailbox.RabbitMq.fsproj
+++ b/CurryOn.Actor/CurryOn.Actor.Mailbox.RabbitMq/CurryOn.Actor.Mailbox.RabbitMq.fsproj
@@ -3,6 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.1.0</Version>
+    <Authors>Eshbach, Aaron</Authors>
+    <Company>CurryOn</Company>
+    <Description>Rabbit MQ implementation of Mailbox interface for CurryOn.Actor</Description>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageTags>rabbit-mq mailbox actor</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,6 +29,13 @@
 
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
